--- a/css/tales_theme.css
+++ b/css/tales_theme.css
@@ -17,20 +17,38 @@
 	
 /* 채팅 범위가 범위에 가득 차도록 */
 html, body			{ margin:0; padding:0; overflow:hidden; }
-.chat_container	{ position:relative; width:100%; bottom:0; }
+.chat_wrapper		{ position:relative; height:100%; }
+.chat_container	{ position:absolute; width:100%; bottom:0; }
 
 /* 이미지 크기 조정 */
 .dccon				{ height:100px; max-width:100%; max-height:100%; }
 .twitch_emote	{ height:56px; max-width:100%; max-height:100%; }
 
+
 /* 채팅 위치 설정 */
 .chat_text_nickname	{	display:block; width:calc(100% - 10px);
-											box-sizing:border-box;
-											text-align:right; }
+											margin:20px 0 0; padding:5px 40px 5px 5px;
+											box-sizing:border-box; text-align:right; }
 .chat_text_message	{	height:auto; max-height:100px; width:100%;
-											margin:0 0 10px 10px; padding:5px; }
-											
+											margin:10px; margin-top:calc(-1em - 25px);
+											padding:5px; }
+
+
 
 /* 배경 그래픽 지정 */
-.chat_text_message {	background-color:transparent !important;
-											background-image:'https://krynen.github.io/jsassist-custom-css/images/blob.png'; }
+.chat_text_nickname	{	position:relative; z-index:1;
+											background-image:linear-gradient(
+												70deg, transparent 50%,
+												rgb(192,80,12) 80%, transparent 100%; }
+.chat_text_message	{	background-color:transparent !important;
+											border-image-source:
+										'https://krynen.github.io/jsassist-custom-css/images/blob.png';
+											border-image-slice:35 39 11 25 fill;
+											border-width:35px 39px 11px 25px; 
+											position:relative; z-index:0; overflow:hidden; }
+
+/* 폰트 설정 */
+.chat_text_message {	font-family:inherit !important;
+											font-size:1em !important;
+											color:rgb(192,80,12) important!;
+											text-shadow:0 -1px 1px rgba(0,0,0,0.8); }
