--- a/css/tales_theme.css
+++ b/css/tales_theme.css
@@ -29,7 +29,7 @@ html, body			{ margin:0; padding:0; overflow:hidden; }
 .chat_text_nickname	{	display:block; width:calc(100% - 10px);
 											margin:20px 0 0; padding:5px 40px 5px 5px;
 											box-sizing:border-box; text-align:right; }
-.chat_text_message	{	height:auto; max-height:100px; width:100%;
+.chat_text_message	{	height:auto; max-height:160px;
 											margin:10px; margin-top:calc(-1em - 25px);
 											padding:5px; }
 
@@ -39,16 +39,17 @@ html, body			{ margin:0; padding:0; overflow:hidden; }
 .chat_text_nickname	{	position:relative; z-index:1;
 											background-image:linear-gradient(
 												70deg, transparent 50%,
-												rgb(192,80,12) 80%, transparent 100%; }
+												rgb(192,80,12) 80%, transparent 90%); }
 .chat_text_message	{	background-color:transparent !important;
 											border-image-source:
-										'https://krynen.github.io/jsassist-custom-css/images/blob.png';
+				url(https://krynen.github.io/jsassist-custom-css/images/blob.png);
 											border-image-slice:35 39 11 25 fill;
 											border-width:35px 39px 11px 25px; 
+											border-style:solid; box-sizing:border-box;
 											position:relative; z-index:0; overflow:hidden; }
 
 /* 폰트 설정 */
 .chat_text_message {	font-family:inherit !important;
 											font-size:1em !important;
-											color:rgb(192,80,12) important!;
+											color:rgb(192,80,12) !important;
 											text-shadow:0 -1px 1px rgba(0,0,0,0.8); }
