--- a/css/tales_theme.css
+++ b/css/tales_theme.css
@@ -9,10 +9,10 @@
 
 /* 애니메이션 정의 */
 @-webkit-keyframes ToLeft {
-	0%	{ -webkit-transform:translateX(calc(100% - 2000px)); }
+	0%	{ -webkit-transform:translateX(100%); }
 	to	{ -webkit-transform:none; } }
 @keyframes ToLeft {
-	0%	{ transform:translateX(calc(100% - 2000px)); }
+	0%	{ transform:translateX(100%); }
 	to	{ transform:none; } }
 .chat_text_nickname,
 .chat_text_message	{	animation:ToLeft .5s ease forwards; 
