--- a/css/tales_theme.css
+++ b/css/tales_theme.css
@@ -27,8 +27,10 @@ html, body			{ margin:0; padding:0; overflow:hidden; }
 .chat_container	{ position:absolute; width:100%; bottom:0; }
 
 /* 이미지 크기 조정 */
-.dccon				{ height:100px; max-width:100%; max-height:100%; }
-.twitch_emote	{ height:56px; max-width:100%; max-height:100%; }
+.dccon,
+.twitch_emote	{ max-width:100%; max-height:100%; vertical-align:middle; }
+.dccon				{	height:100px; }
+.twitch_emote	{	height:56px; }
 
 
 /* 채팅 위치 설정 */
