--- a/css/tales_theme.css
+++ b/css/tales_theme.css
@@ -39,7 +39,7 @@ html, body			{ margin:0; padding:0; overflow:hidden; }
 											box-sizing:border-box; text-align:right; }
 .chat_text_message	{	height:auto; max-height:181px;
 											margin-top:calc(-1em - 40px);
-											padding:15px 5px 5px; }
+											padding:5px; }
 
 
 
@@ -53,10 +53,14 @@ html, body			{ margin:0; padding:0; overflow:hidden; }
 .chat_text_message	{	background-color:transparent !important;
 											border-image-source:
 				url(https://krynen.github.io/jsassist-custom-css/images/blob.png);
-											border-image-slice:50 39 11 25 fill;
-											border-width:50px 39px 11px 25px; 
+											border-image-slice:89 37 10 12 fill;
+											border-width:89px 37px 10px 12px; 
 											border-style:solid; box-sizing:border-box;
-											position:relative; z-index:0; overflow:hidden; }
+											position:relative; z-index:0; overflow:visible; }
+.chat_text_message_inner
+										{	margin-top:30px; overflow:hidden;
+											max-height:calc(181px - 99px - 10px + 30px);
+/* message_h - message_v_border - message_v_padding + inner_margin_top */ }
 
 /* 폰트 설정 */
 html								{	font-family:'Jeju Gothic', serif !important;
