--- a/css/tails_theme.css
+++ b/css/tails_theme.css
@@ -42,7 +42,6 @@ html, body			{ margin:0; padding:0; overflow:hidden; }
 											padding:5px; }
 
 
-
 /* 배경 그래픽 지정 */
 .chat_text_nickname	{	position:relative; z-index:1;
 											background-image:linear-gradient(
@@ -58,7 +57,7 @@ html, body			{ margin:0; padding:0; overflow:hidden; }
 											position:relative; z-index:0; overflow:visible; }
 .chat_text_message_inner
 										{	margin-top:-25px; overflow:hidden;
-											max-height:calc(181px - 87px - 10px + 30px);
+											max-height:calc(181px - 87px - 10px + 30px); padding:2px;
 /* message_h - message_v_border - message_v_padding + inner_margin_top */ }
 
 /* 폰트 설정 */
@@ -67,8 +66,12 @@ html								{	font-family:'Jeju Gothic', serif !important;
 .chat_text_nickname	{	font-size:0.9em !important; }
 .chat_text_message	{	font-family:inherit !important;
 											font-size:1em !important;
-											color:rgb(192,80,12) !important;
-											text-shadow:0 -1px 1px rgba(0,0,0,0.8); }
+											color: white !important;
+											text-shadow:
+												-1px -1px 1px rgb(192,80,12), -1px   0 1px rgb(192,80,12),
+												-1px  1px 1px rgb(192,80,12),    0 1px 1px rgb(192,80,12),
+												 1px  1px 1px rgb(192,80,12),  1px   0 1px rgb(192,80,12),
+												 1px -1px 1px rgb(192,80,12),   0 -1px 1px rgb(192,80,12); }
 											
 											
 /* 플랫폼 표기 제거 */
