--- a/css/tails_theme.css
+++ b/css/tails_theme.css
@@ -68,6 +68,10 @@ html								{	font-family:'Jeju Gothic', serif !important;
 												 1px -1px 1px rgb(192,80,12),   0 -1px 1px rgb(192,80,12); }
 .chat_text_nickname	{	font-size:0.9em !important; }
 .chat_text_message	{	font-size:1em !important; }
+
+span.backslash			{	font-family:'Noto Sans KR' !important;
+											font-size:0.88em; letter-spacing:0.9px;
+											font-weight:800; font-strtch:ultra-expanded; }
 											
 											
 /* ÇÃ·§Æû Ç¥±â Á¦°Å */
