--- a/css/tails_theme.css
+++ b/css/tails_theme.css
@@ -71,7 +71,8 @@ html								{	font-family:'Jeju Gothic', serif !important;
 
 span.backslash			{	font-family:'Noto Sans KR' !important;
 											font-size:0.88em; letter-spacing:0.9px;
-											font-weight:800; padding:0 2px; }
+											font-weight:800; padding:0 2px;
+											transform:scaleX(1.08); display:inline-block; }
 											
 											
 /* ÇÃ·§Æû Ç¥±â Á¦°Å */
