--- a/css/tails_theme.css
+++ b/css/tails_theme.css
@@ -62,15 +62,15 @@ html								{	font-family:'Jeju Gothic', serif !important;
 .chat_text_nickname,
 .chat_text_message	{	font-family:inherit !important; color: white !important;
 											 text-shadow:
-												-1px -1px 1px rgb(123,56,18), -1px   0 1px rgb(123,56,18),
-												-1px  1px 1px rgb(123,56,18),    0 1px 1px rgb(123,56,18),
-												 1px  1px 1px rgb(123,56,18),  1px   0 1px rgb(123,56,18),
-												 1px -1px 1px rgb(123,56,18),   0 -1px 1px rgb(123,56,18),
+												-1px -1px 1px rgba(123,56,18,0.8), -1px   0 1px rgba(123,56,18,0.8),
+												-1px  1px 1px rgba(123,56,18,0.8),    0 1px 1px rgba(123,56,18,0.8),
+												 1px  1px 1px rgba(123,56,18,0.8),  1px   0 1px rgba(123,56,18,0.8),
+												 1px -1px 1px rgba(123,56,18,0.8),   0 -1px 1px rgba(123,56,18,0.8),
     
-    										-1px -1px 3px rgba(192,80,12,0.8), -1px   0 3px rgba(192,80,12,0.8),
-												-1px  1px 3px rgba(192,80,12,0.8),    0 1px 3px rgba(192,80,12,0.8),
-												 1px  1px 3px rgba(192,80,12,0.8),  1px   0 3px rgba(192,80,12,0.8),
-												 1px -1px 3px rgba(192,80,12,0.8),   0 -1px 3px rgba(192,80,12,0.8); 
+    										-1px -1px 3px rgb(192,80,12), -1px   0 3px rgb(192,80,12),
+												-1px  1px 3px rgb(192,80,12),    0 1px 3px rgb(192,80,12),
+												 1px  1px 3px rgb(192,80,12),  1px   0 3px rgb(192,80,12),
+												 1px -1px 3px rgb(192,80,12),   0 -1px 3px rgb(192,80,12); 
  }
 .chat_text_nickname	{	font-size:0.9em !important; }
 .chat_text_message	{	font-size:1em !important; }
