--- a/css/tails_theme.css
+++ b/css/tails_theme.css
@@ -1,11 +1,6 @@
 /* 폰트 로드 */
 @import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
-@import url(https://fonts.googleapis.com/earlyaccess/hanna.css);
-@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-@import url(https://fonts.googleapis.com/earlyaccess/nanumbrushscript.css);
-@import url(https://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
 @import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
-
 
 /* 애니메이션 정의 */
 @keyframes ToLeft {
@@ -13,49 +8,26 @@
 	to	{ transform:none; } }
 .chat_text_nickname,
 .chat_text_message	{	animation:ToLeft .5s ease forwards; }
-/*@keyframes Highlight
-{ 0%, 100%	{	color:hsl(0, 100%, 40%); }
-  25%				{	color:hsl(90, 100%, 40%); }
-  50%				{	color:hsl(179, 100%, 40%); }
-	75%				{ color:hsl(269, 100%, 40%); } }
-.highlight { animation:Highlight 2s linear infinite; }*/
 	
-	
-/* 채팅 범위가 범위에 가득 차도록 */
+/* 채팅창 위치 기본 설정 */
 html, body			{ margin:0; padding:0; overflow:hidden; }
 .chat_wrapper		{ position:relative; height:100%; }
 .chat_container	{ position:absolute; width:100%; bottom:0; }
 
-/* 이미지 크기 조정 */
+/* 플랫폼 이미지 제거 */
+.chat_platform_twitch,
+.chat_platform_youtube,
+.chat_platform_tvpot,
+.chat_platform_none			{ display:none !important; 
+													width:0; margin:0; padding:0; }
+
+/* 디시콘, 감정표현 조정 */
 .dccon,
 .twitch_emote	{ max-width:100%; max-height:100%; vertical-align:middle; }
 .dccon				{	height:100px; }
-.twitch_emote	{	height:56px; }
+.twitch_emote	{	height:50px; }
 
-
-/* 채팅 위치 설정 */
-.chat_text_nickname	{	display:block; width:calc(100% - 10px);
-											margin:23px 0 0; padding:5px 30px 5px 5px;
-											box-sizing:border-box; text-align:right; }
-.chat_text_message	{	height:auto; max-height:181px;
-											margin-top:calc(-1em - 33px);
-											padding:5px; }
-
-
-/* 배경 그래픽 지정 */
-.chat_text_nickname	{ position:relative; z-index:1; }
-.chat_text_message	{	background-color:transparent !important;
-											border-image-source:
-				url(https://krynen.github.io/jsassist-custom-css/images/blob.png);
-											border-image-slice:80 37 7 12 fill;
-											border-width:77px 37px 7px 12px; 
-											border-style:solid; box-sizing:border-box;
-											position:relative; z-index:0; overflow:visible; }
-.chat_text_message_inner
-										{	margin:-25px -25px 0 0; overflow:hidden;
-											max-height:calc(181px - 87px - 10px + 30px); padding:2px;
-/* message_h - message_v_border - message_v_padding + inner_margin_top */ }
-
+											
 /* 폰트 설정 */
 html								{	font-family:'Jeju Gothic', serif !important;
 											font-size:20px !important; }
@@ -75,14 +47,31 @@ html								{	font-family:'Jeju Gothic', serif !important;
 .chat_text_nickname	{	font-size:0.9em !important; }
 .chat_text_message	{	font-size:1em !important; }
 
+/* 백슬래시 지역화(원화기호로 표시 안되게) */
 span.backslash			{	font-family:'Noto Sans KR' !important;
 											font-size:0.88em; letter-spacing:0.9px;
 											font-weight:800; padding:0 2px;
 											transform:scaleX(1.08); display:inline-block; }
-											
-											
-/* 플랫폼 표기 제거 */
-.chat_platform_twitch,
-.chat_platform_youtube,
-.chat_platform_tvpot,
-.chat_platform_none			{	display:none; }
+
+/* 채팅 길이 제한 */
+.chat_text_message_inner	{	max-height:100px; overflow:hidden; }
+
+/* 채팅창 이미지 지정 */
+.chat_text_nickname	{ position:relative; z-index:1; }
+.chat_text_message	{	background-color:transparent !important;
+											border-image-source:
+	url(https://krynen.github.io/jsassist-custom-css/images/tails_blob.png);
+											border-image-slice:80 37 9 12 fill;
+											border-width:77px 37px 9px 12px; 
+											border-style:solid; box-sizing:border-box;
+											position:relative; z-index:0; overflow:visible; }
+.chat_text_message_inner
+										{	margin:-25px -25px 0 0; padding:2px;  }
+
+
+/* 채팅창 위치 설정 */
+.chat_text_nickname	{	display:block; width:calc(100% - 10px);
+											margin:23px 0 0; padding:5px 30px 5px 5px;
+											box-sizing:border-box; text-align:right; }
+.chat_text_message	{	height:auto; margin-top:calc(-1em - 33px);
+											padding:5px; }
