--- a/css/yeokka_theme.css
+++ b/css/yeokka_theme.css
@@ -60,14 +60,14 @@ span.backslash			{	font-family:'Noto Sans KR' !important;
 .chat_text_message	{	border-style:solid; box-sizing:border-box; }
 .chat_text_nickname	{	border-image-source:
 	url(https://krynen.github.io/jsassist-custom-css/images/yeok_ear.png);
-											border-image-slice:9 26 0 26 fill;
-											border-width:9px 26px 0 26px; }
+											border-image-slice:4 12 0 fill;
+											border-width:4px 12px 0px; }
 .chat_text_message	{	background-color:transparent !important;
 											border-image-source:
 	url(https://krynen.github.io/jsassist-custom-css/images/yeok_body.png);
-											border-image-slice:6 39 6 6 fill;
+											border-image-slice:5 34 5 5 fill;
 											border-image-repeat:repeat;
-											border-width:6px 39px 6px 6px;
+											border-width:5px 34px 5px 5px;
 											margin:0 0 1px 0;
 											padding:5px 8px; }
 .chat_text_nickname:after	{
