--- a/css/yeokka_theme.css
+++ b/css/yeokka_theme.css
@@ -88,3 +88,17 @@ span.backslash			{	font-family:'Noto Sans KR' !important;
 .chat_text_nickname:after {	display:block; position:absolute; right:0;
 														height:30px; width:40px;
 														margin:-30px 3px 0 0; }
+														
+/* 스트리머 스으페샬 */
+.chat_text_nickname.usr_yeokka				{	font-size:0 !important;
+																				width:95px; height:34px; }
+.chat_text_nickname.usr_yeokka::after	{	content:none; display:none; }
+.chat_text_message.usr_yeokka					{	height:130px !important; }
+.chat_text_message.usr_yeokka::before	{	content:"";
+																				background-image:
+	url(https://krynen.github.io/jsassist-custom-css/images/yeok_char.png);
+																				background-repeat:no-repeat;
+																				width:102px; height:139px;
+																				position:absolute; display:block;
+																				margin:-23px 0 0 -14px; }
+.usr_yeokka .chat_Text_message_inner	{	padding-left:100px; }
