--- a/css/tails_theme.css
+++ b/css/tails_theme.css
@@ -1,34 +1,34 @@
-/* ÆùÆ® ·Îµå */
+/* í°íŠ¸ ë¡œë“œ */
 @import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
 @import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
-/* ¾Ö´Ï¸ŞÀÌ¼Ç Á¤ÀÇ */
+/* ì• ë‹ˆë©”ì´ì…˜ ì •ì˜ */
 @keyframes ToLeft {
 	0%	{ transform:translateX(100%); }
 	to	{ transform:none; } }
 .chat_text_nickname,
 .chat_text_message	{	animation:ToLeft .5s ease forwards; }
 	
-/* Ã¤ÆÃÃ¢ À§Ä¡ ±âº» ¼³Á¤ */
+/* ì±„íŒ…ì°½ ìœ„ì¹˜ ê¸°ë³¸ ì„¤ì • */
 html, body			{ margin:0; padding:0; overflow:hidden; }
 .chat_wrapper		{ position:relative; height:100%; }
 .chat_container	{ position:absolute; width:100%; bottom:0; }
 
-/* ÇÃ·§Æû ÀÌ¹ÌÁö Á¦°Å */
+/* í”Œë«í¼ ì´ë¯¸ì§€ ì œê±° */
 .chat_platform_twitch,
 .chat_platform_youtube,
 .chat_platform_tvpot,
 .chat_platform_none			{ display:none !important; 
 													width:0; margin:0; padding:0; }
 
-/* µğ½ÃÄÜ, °¨Á¤Ç¥Çö Á¶Á¤ */
+/* ë””ì‹œì½˜, ê°ì •í‘œí˜„ ì¡°ì • */
 .dccon,
 .twitch_emote	{ max-width:100%; max-height:100%; vertical-align:middle; }
 .dccon				{	height:100px; }
 .twitch_emote	{	height:50px; }
 
 											
-/* ÆùÆ® ¼³Á¤ */
+/* í°íŠ¸ ì„¤ì • */
 html								{	font-family:'Jeju Gothic', serif !important;
 											font-size:20px !important; }
 .chat_text_nickname,
@@ -47,16 +47,16 @@ html								{	font-family:'Jeju Gothic', serif !important;
 .chat_text_nickname	{	font-size:0.9em !important; }
 .chat_text_message	{	font-size:1em !important; }
 
-/* ¹é½½·¡½Ã Áö¿ªÈ­(¿øÈ­±âÈ£·Î Ç¥½Ã ¾ÈµÇ°Ô) */
+/* ë°±ìŠ¬ë˜ì‹œ ì§€ì—­í™”(ì›í™”ê¸°í˜¸ë¡œ í‘œì‹œ ì•ˆë˜ê²Œ) */
 span.backslash			{	font-family:'Noto Sans KR' !important;
 											font-size:0.88em; letter-spacing:0.9px;
 											font-weight:800; padding:0 2px;
 											transform:scaleX(1.08); display:inline-block; }
 
-/* Ã¤ÆÃ ±æÀÌ Á¦ÇÑ */
+/* ì±„íŒ… ê¸¸ì´ ì œí•œ */
 .chat_text_message_inner	{	max-height:100px; overflow:hidden; }
 
-/* Ã¤ÆÃÃ¢ ÀÌ¹ÌÁö ÁöÁ¤ */
+/* ì±„íŒ…ì°½ ì´ë¯¸ì§€ ì§€ì • */
 .chat_text_nickname	{ position:relative; z-index:1; }
 .chat_text_message	{	background-color:transparent !important;
 											border-image-source:
@@ -69,7 +69,7 @@ span.backslash			{	font-family:'Noto Sans KR' !important;
 										{	margin:-25px -25px 0 0; padding:2px;  }
 
 
-/* Ã¤ÆÃÃ¢ À§Ä¡ ¼³Á¤ */
+/* ì±„íŒ…ì°½ ìœ„ì¹˜ ì„¤ì • */
 .chat_text_nickname	{	display:block; width:calc(100% - 10px);
 											margin:23px 0 0; padding:5px 30px 5px 5px;
 											box-sizing:border-box; text-align:right; }
