--- a/css/yeokka_theme.css
+++ b/css/yeokka_theme.css
@@ -1,7 +1,7 @@
 /* 폰트 로드 */
 @import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
 @import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
-@import url(http://fonts.googleapis.com/earlyaccess/cwtexyen.css);
+@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
 
 /* 애니메이션 정의 */
 @keyframes ToBottom {
